Add Chatbot UI and backend functionality for student support
- Created Chatbot.fxml for the user interface of the chatbot.
- Implemented TestFXML and TestFXML2 classes for testing FXML loading.
- Developed DatabaseTools class for database interactions related to student subjects, schedules, attendance, and grades.
- Introduced VirtualAssistant class to handle AI interactions using LangChain4j.
- Added ChatbotController to manage user input and display chatbot responses.